--- a/src/components/Table.css
+++ b/src/components/Table.css
@@ -1,11 +1,12 @@
 .table-header{
     font-weight : 900;
-    font-family :Arial, Helvetica, sans-serif
+    font-family :ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 input {
     border: 1px solid black
 }
 button {
     
-    border: 2px solid black
+    border: 2px solid black;
+    font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace; 
 }
