--- a/src/components/Table.css
+++ b/src/components/Table.css
@@ -3,10 +3,10 @@
     font-family :ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 input {
-    border: 1px solid black
+    border: 1px solid black;
+    font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 button {
-    
     border: 2px solid black;
     font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace; 
 }
