--- a/src/components/Table.css
+++ b/src/components/Table.css
@@ -8,5 +8,6 @@ input {
 }
 button {
     border: 2px solid black;
+    padding: 3px;
     font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace; 
 }
