--- a/src/components/Table.css
+++ b/src/components/Table.css
@@ -11,3 +11,7 @@ button {
     padding: 3px;
     font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace; 
 }
+table {
+    margin-left: auto;
+    margin-right: auto
+}
