--- a/src/components/Table.css
+++ b/src/components/Table.css
@@ -2,16 +2,16 @@
     font-weight : 900;
     font-family :ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
-input {
+/* input {
     border: 1px solid black;
     font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
-}
-button {
+} */
+/* button {
     border: 2px solid black;
     padding: 3px;
     font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace; 
     
-}
+} */
 table {
     margin-left: auto;
     margin-right: auto
